# VulkanMapRenderer

./: CMakeLists.txt  compile_shaders.bat
engine/: CMakeLists.txt
engine/src/engine/: common.h  engine.h
engine/src/engine/assets/: assets.cpp  assets.h  image_asset.cpp  image_asset.h  text_asset.cpp  text_asset.h
engine/src/engine/core/: app.h  entry.h
engine/src/engine/core/graphics/: common.h
engine/src/engine/core/graphics/vk/: vk.cpp  vk.h
engine/src/engine/core/graphics/vk/commands/: command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h
engine/src/engine/core/graphics/vk/descriptors/: descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h
engine/src/engine/core/window/: time.cpp  time.h  window.cpp  window.h
engine/src/engine/tasks/: tasks.cpp  tasks.h
engine/src/engine/util/math/: math.cpp  math.h
engine/src/engine/util/memory/: aligned.cpp  aligned.h
engine/src/engine/util/profiling/: profiling.h
engine/src/engine/util/system/: cpu.h
engine/src/engine/util/vector/: vector.h
game/: CMakeLists.txt
game/src/: main.cpp  main.h
game/src/components/camera/: camera.cpp  camera.h  transform.cpp
game/src/components/map/: map.cpp  map.h
game/src/components/map_renderer/: color_pass.cpp  color_pass.h  composition.cpp  composition.h  light_pass.cpp  light_pass.h  map_renderer.cpp  map_renderer.h  tiles.h
game/src/components/menu_renderer/: menu_renderer.cpp  menu_renderer.h
game/src/components/ui_renderer/: ui_renderer.cpp  ui_renderer.h
game/src/ecs/: collections.cpp  collections.h  component.cpp  component.h  ecs.cpp  ecs.h  factory.cpp  factory.h
game/src/game/: game.cpp  game.h
game/src/game/ecs/: camera.cpp  camera.h  transform.h
game/src/game/world/map/: blocks.h  map.cpp  map.h
game/src/gameplay/: game.cpp  game.h
game/src/gameplay/ecs/: camera.cpp  camera.h  transform.cpp  transform.h
game/src/programs/: map_editor.cpp  map_editor.h  text_editor.cpp  text_editor.h
game/src/renderer/atlas/: texture_atlas.cpp  texture_atlas.h  tile_map.cpp  tile_map.h
game/src/renderer/world/map/: color_pass.cpp  color_pass.h  composition.cpp  composition.h  map_renderer.cpp  map_renderer.h  tiles.cpp
game/src/state/: state.cpp  state.h
game/src/sync/: sync.h
game/src/ui/: ui.cpp  ui.h
game/src/world/map/: blocks.h  map.cpp  map.h
(+46 files in other folders)
